[ADD] Estate_workshop & estate_nursery : Fix bug in spb , Feature date_end in contract

--- a/estate_nursery/views/estate_nursery_transfermn.xml
+++ b/estate_nursery/views/estate_nursery_transfermn.xml
@@ -98,12 +98,12 @@
                                                    'default_batch_id': batch_id}"/>
                                         </tree>
                                 </page>
-                                <page string="Vehicle Information">
+                                <page name='vehicle_information' string="Vehicle Information">
                                     <tree>
-                                        <field name="vehicle_timesheet_ids" track_visibility="onchange" attrs="{
-                                                'readonly': [('state','=','done')]}"
-                                                   context="{'tree_view_ref' : 'estate_nursery.view_tree_timesheet_activity_transport',
-                                                   'default_dc_type' : 2}"/>
+                                        <!--<field name="vehicle_timesheet_ids" track_visibility="onchange" attrs="{-->
+                                                <!--'readonly': [('state','=','done')]}"-->
+                                                   <!--context="{'tree_view_ref' : 'estate_nursery.view_tree_timesheet_activity_transport',-->
+                                                   <!--'default_dc_type' : 2}"/>-->
                                     </tree>
                                 </page>
                             </notebook>
