--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -16,26 +16,6 @@
             </field>
         </record>
 
-        <record model="ir.ui.view" id="view_form_vehicleadd_employeeinternal_inherited">
-            <field name="name">Vehicle - Extension</field>
-            <field name="model">fleet.vehicle</field>
-            <field name="inherit_id" ref="fleet.fleet_vehicle_form"/>
-            <field name="arch" type="xml">
-                <xpath expr="//group[1]" position="before">
-                    <group string="Vehicle Information">
-                        <!--<field name="no_vehicle"/>-->
-                        <field name="vehicle_type"/>
-                    </group>
-                    <group string="Internal Driver" attrs="{'invisible': [('vehicle_type','=','2')]}" >
-                        <field name="employee_driver_id" string="Driver Internal" options="{'no_create_edit': True}"/>
-                    </group>
-                </xpath>
-                <!--<group string="Additional Properties" position="before">-->
-                   <!-- -->
-                <!--</group>-->
-            </field>
-        </record>
-
         <record model="ir.ui.view" id="view_form_seeddo">
             <field name="name">Seed Delivery Order</field>
             <field name="model">estate.nursery.seeddo</field>
@@ -100,32 +80,27 @@
                         </group>
                         <group>
                             <notebook>
-                                <page string="BPB List" attrs="{'readonly':['|',('state','=','validate1'),('state','=','validate2'),
-                                ('state','=','done')]}">
+                                <page string="BPB List">
                                         <field name="request_ids" string="Information For BPB"
                                                attrs="{
                                         'required' : [('state', '=', 'confirmed')],
-                                        'readonly':['|',('state','=','validate1'),('state','=','validate2'),
-                                ('state','!=','done')]}"
+                                        'readonly':[('state','=','done')]}"
                                                 context="{'tree_view_ref' : 'estate_nursery.view_tree_request_planting',
                                                 'default_seeddo_id': id}"/>
                                 </page>
-<!--attrs="{'invisible':['|',('state','!=','validate2'),-->
-                                <!--('state','!=','done')]}"-->
+
                                 <page string="Return Seed" >
                                         <field name="return_ids" string="Information For Return Seed"
                                                attrs="{
-                                        'required' : [('state', '=', 'validate2')],
-                                        'readonly' : [('state', '=', 'done')]}"
+                                        'readonly' : [('state','!=','validate2')]}"
                                                 context="{'tree_view_ref' : 'estate_nursery.view_tree_returnseed',
                                                 'default_seeddo_id': id}"/>
                                 </page>
 
-                                 <page string="Tranportir Activity" attrs="{'readonly':['|',('state','=','validate1'),('state','=','validate2'),
-                                ('state','=','done')]}">
+                                 <page string="Tranportir Activity">
                                         <field name="activityline_ids" attrs="{
                                         'required' : [('state', '=', 'confirmed')],
-                                        'readonly' : ['|',('state', '=','validate1'),('state', '=', 'validate2'),('state', '=', 'done')]}"
+                                        'readonly' : [('state', '!=','validate1')]}"
                                                 context="{'tree_view_ref' : 'estate_nursery.view_tree_activityline'}"/>
                                     <group class="oe_subtotal_footer oe_right">
                                         <field name="expense" widget="monetary" readonly="1"
@@ -140,22 +115,12 @@
                                     </group>
                                 </page>
 
-                                <page name='detail_transportir' string="Detail Transportir" attrs="{}">
+                                <page name='detail_transportir' string="Detail Transportir">
                                         <field name="dotransportir_ids"
                                                attrs="{
                                         'required' : [('state', '=', 'confirmed')],
-                                        'readonly' : ['|',('state', '=', 'validate1'),('state', '=', 'validate2'),('state', '=', 'done')]}"
-                                                context="{'tree_view_ref' : 'estate_nursery.view_tree_dotransportir'}"/>
-                                </page>
-
-                                 <page string="Timesheet Vehicle &amp; Transportir" attrs="{'invisible':[('state','!=','validate1'),('state','!=','validate2'),
-                                     ('state','!=','done')]}">
-                                        <field name="timesheet_ids"
-                                               attrs="{
-                                        'required' : [('state', '=', 'confirmed')],
                                         'readonly' : [('state', '=', 'done')]}"
-                                                context="{'tree_view_ref' : 'estate_vehicle.view_tree_timesheet_activity_transport',
-                                               'default_dc_type' : 1, 'default_owner_id' : id}"/>
+                                                context="{'tree_view_ref' : 'estate_nursery.view_tree_dotransportir'}"/>
                                 </page>
 
                                 <page string="Additional Information">
@@ -181,12 +146,12 @@
             <field name="model">estate.nursery.dotransportir</field>
             <field name="arch" type="xml">
                 <tree string="Detail Transportir View" editable="bottom">
-                    <field name="estate_vehicle_id" string="Code Vehicle" required="1"
+                    <field name="estate_vehicle_id" string="Vehicle" required="1"
                            options="{'no_create_edit': True}" domain="['|',('vehicle_type','=',1),('vehicle_type','=',2)]"/>
-                    <field name="capacity" string="Capacity" readonly="1">{‘readonly_by_pass’: True}</field>
-                    <field name="driver" string="Driver Vehicle"  invisible="1" readonly="1">{‘readonly_by_pass’: True}</field>
-                    <field name="no_vehicle" string="No Vehicle" readonly="1"/>
-                    <field name="vehicle_type" string="Vehicle Type" readonly="1"/>
+                    <field name="capacity" string="Capacity" readonly="0"/>
+                    <field name="driver" string="Driver Vehicle"  invisible="1" readonly="1"/>
+                    <field name="no_vehicle" string="No Vehicle" readonly="0"/>
+                    <field name="vehicle_type" string="Vehicle Type" readonly="0"/>
                 </tree>
             </field>
         </record>
@@ -200,9 +165,9 @@
                     <field name="activity_id" string="Activity"  options="{'no_create_edit': True}"/>
                     <field name="product_type_id" string="Product UoM">{‘readonly_by_pass’: True}</field>
                     <field name="qty_product" string="Quantity" />
-                    <field name="price" string="Price/product" required="1">{‘readonly_by_pass’: True}</field>
+                    <field name="price" string="Price/product" required="1"/>
                     <field name="transportactivity_expense_id"/>
-                    <field name="result_price" string="Total Price" readonly="1"/>
+                    <field name="result_price" string="Total Price" readonly="0"/>
                 </tree>
             </field>
         </record>
