--- a/estate_workshop/views/estate_mecanic_timesheet.xml
+++ b/estate_workshop/views/estate_mecanic_timesheet.xml
@@ -66,13 +66,14 @@
             <field name="model">estate.mecanic.timesheet</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
-                <tree editable="bottom">
+                <tree editable="bottom" colors="orange:contract_key!=False">
                     <field name="id" invisible="1"/>
                     <field name="date_activity_transport" string="Date Activity"/>
                     <field name="owner_id"  invisible="1" readonly="1"/>
                     <field name="dc_type" invisible="1" readonly="0"/>
                     <field name="asset_id" string="Asset" options="{'no_create_edit': True}"/>
                     <field name="vehicle_id" invisible="1" readonly="0"/>
+                    <field name="contract_key" invisible="1"/>
                     <field name="employee_id" string="Employee" options="{'no_create_edit': True}"/>
                     <field name="mastertask_id" options="{'no_create_edit': True}" string="Master Task"/>
                     <field name="task_id" string="Task" options="{'no_create_edit': True}"/>
