--- a/estate_vehicle/views/inherit_transfertomn_spb_view.xml
+++ b/estate_vehicle/views/inherit_transfertomn_spb_view.xml
@@ -27,8 +27,8 @@
                  <xpath expr="//page[@name='detail_transportir']" position="after">
                      <page string="Vehicle Timesheet">
                          <tree>
-                             <field name="timesheet_ids" track_visibility="onchange" attrs="{'required':['|',('state','=','validate1')],
-                                    'readonly': [('state','!=','validate1')]}"
+                             <field name="timesheet_ids" track_visibility="onchange" attrs="{
+                                    'readonly': [('state','!=','confirmed')]}"
                                     context="{'tree_view_ref' : 'estate_vehicle.view_spb_timesheet_tree',
                                            'default_dc_type' : 1}"/>
                          </tree>
