--- a/estate_workshop/views/estate_asset.xml
+++ b/estate_workshop/views/estate_asset.xml
@@ -11,6 +11,7 @@
                     <field name="product_id" string="Product" options="{'no_create_edit': True}"
                            attrs="{'invisible': [('type_asset','!=','5'),
                     ('type_asset','!=','4'),('type_asset','!=','6'),('type_asset','!=','3')]}"/>
+                    <field name="company_id" string="Company" options="{'no_create_edit': True}"/>
                     <field name="asset_value" string="Asset Value"/>
                 </field>
             </field>
