--- a/estate_vehicle/views/fleet_vehicle_timesheet.xml
+++ b/estate_vehicle/views/fleet_vehicle_timesheet.xml
@@ -62,13 +62,40 @@
                                 <tree>
                                     <field name="timesheet_ids" track_visibility="onchange" attrs="{
                                         'readonly': [('state','=','done')]}"
-                                        context="{'tree_view_ref' : 'estate_vehicle.view_tree_timesheet_activity_transport',
-                                               'default_dc_type' : 5}"/>
+                                        context="{'tree_view_ref' : 'estate_vehicle.view_tree_fleet_timesheet_activity_transport',
+                                               }"/>
                                 </tree>
                             </group>
 
                     </sheet>
                 </form>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="view_tree_fleet_timesheet_activity_transport">
+            <field name="name">Fleet timesheet activity Tree</field>
+            <field name="model">inherits.fleet.vehicle.timesheet</field>
+            <field name="arch" type="xml">
+                <tree string="Fleet Timesheet Activity Tree" editable='bottom' delete="true">
+                    <field name="id" invisible="1"/>
+                    <field name="date_activity_transport" invisible="1" string="Date Activity"/>
+                    <field name="owner_id"  invisible="1" readonly="1"/>
+                    <field name="dc_type" invisible="1"/>
+                    <field name="vehicle_id" string="Vehicle" options="{'no_create_edit': True}"/>
+                    <field name="employee_id" string="Driver/Helper" options="{'no_create_edit': True}"/>
+                    <field name="activity_id" string="Activity" options="{'no_create_edit': True}"/>
+                    <field name="uom_id" string="UOM" options="{'no_create_edit': True}"/>
+                    <field name="unit" string="Unit"/>
+                    <field name="start_location" string="Start Location" options="{'no_create_edit': True}"/>
+                    <field name="end_location" string="End Location" options="{'no_create_edit': True}"/>
+                    <field name="distance_location" readonly="1" string="Distance Location ">{‘readonly_by_pass’: True}</field>
+                    <field name="start_km" string="Start KM"/>
+                    <field name="end_km" string="End KM"/>
+                    <field name="total_distance" string="&#916; KM"/>
+                    <field name="start_time" class="input-start-time" widget="float_time" string="Start Time"/>
+                    <field name="end_time" class="input-end-time" widget="float_time" string="End Time"/>
+                    <field name="total_time" string="&#916; time " readonly="1">{‘readonly_by_pass’: True}</field>
+                </tree>
             </field>
         </record>
 
