[FIX] estate: change after gorontalo visit
* Add division field.
* Remove onchange method on assistant field.
* Costing by planted year - use to create analytic line by planted year account
* Update division report
* Add signature column and total

--- a/estate/views/estate_hr_view.xml
+++ b/estate/views/estate_hr_view.xml
@@ -24,6 +24,7 @@
                             <field name="active"/>
                             <field name="date_effective"/>
                             <field name="employee_id"/>
+                            <field name="division_id"/>
                             <field name="assistant_id"/>
                         </group>
                         <field name="member_ids"/>
